--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "babel-plugin-styled-components": "^1.10.0",
     "gatsby": "^2.6.0",
+    "gatsby-cli": "^2.7.30",
     "gatsby-plugin-styled-components": "^3.0.7",
     "gatsby-source-filesystem": "^2.0.37",
     "gatsby-transformer-remark": "^2.3.12",
     "i": "^0.3.6",
-    "npm": "^6.9.0",
+    "npm": "^6.10.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-icons": "^3.7.0",
